docs: fix wrong Banana Pi model in v2018.1 release notes (#1466)

--- a/docs/releases/v2018.1.rst
+++ b/docs/releases/v2018.1.rst
@@ -92,9 +92,9 @@ ramips-rt305x [#newtarget]_ [#noibss]_
 sunxi [#newtarget]_
 ===================
 
-* LeMaker
+* LeMaker/SinoVoip
 
-  - Lamobo r1
+  - Banana Pi (M1)
 
 
 .. [#newtarget]
