--- a/package/gluon-config-mode-mesh-vpn/i18n/de.po
+++ b/package/gluon-config-mode-mesh-vpn/i18n/de.po
@@ -29,7 +29,7 @@ msgid ""
 "bandwidth available for the network. You can limit how much bandwidth the "
 "node will use at most."
 msgstr ""
-"Dein Knoten kann deine Internetverbindung nutzen um darüber eine "
+"Dein Knoten kann deine Internetverbindung nutzen, um darüber eine "
 "VPN-Verbindung zu anderen Knoten aufzubauen. Die dafür "
 "genutzte Bandbreite kannst du beschränken. Aktiviere die Option, falls keine "
 "per WLAN erreichbaren Nachbarknoten in deiner Nähe sind oder du deine "
