--- a/package/gluon-web-admin/i18n/de.po
+++ b/package/gluon-web-admin/i18n/de.po
@@ -151,8 +151,8 @@ msgstr "Knoten auf der Karte anzeigen"
 msgid "e.g. %s"
 msgstr "z. B. %s"
 
-msgid "No coordinates set; please add them or try the WiFi-based geolocation, which will upload the WiFi networks (SSID, BSSID, strenght, channel) to our server, which in turn will use third party services (Google, OpenStreetMap, ...) to map that to a location. We _need_ a proper location to assign this node to a Freifunk network (\"hood\", \"community\", ...)."
-msgstr "Keine Koordinaten angegeben; bitte gib' sie an oder versuche die WLAN-basierte automatische Lokalisierung, welche die empfangenen Netzwerkdaten (SSID, BSSID, Signalstärke, Kanal) auf unseren Server hochlädt, der wiederum pseodonymisiert über Drittanbieterdienste (Google, OpenStreetMap, ...) versuchen wird, diese Daten in eine Position umzurechnen. Wir <em>benötigen</em> eine Aufstellposition für jeden Konten, um diesen für das richtige Freifunk-Netzwerk (\"hood\", \"community\", ...) zu konfigurieren."
+msgid "No coordinates set; please add them or try the WiFi-based geolocation, which will upload the WiFi networks (SSID, BSSID, strenght, channel) to our server, which in turn will use third party services (Google, OpenStreetMap, ...) to map that to a location. We *need* a proper location to assign this node to a Freifunk network (‘hood’, ‘community’, ...)."
+msgstr "Keine Koordinaten angegeben; bitte gib' sie an oder versuche die WLAN-basierte automatische Lokalisierung, welche die empfangenen Netzwerkdaten (SSID, BSSID, Signalstärke, Kanal) auf unseren Server hochlädt, der wiederum pseodonymisiert über Drittanbieterdienste (Google, OpenStreetMap, ...) versuchen wird, diese Daten in eine Position umzurechnen. Wir benötigen eine Aufstellposition für jeden Konten, um diesen für das richtige Freifunk-Netzwerk (›hood‹, ›community‹, ...) zu konfigurieren."
 
 msgid "Please select where this node will be located at."
 msgstr "Bitte gib' an, wo dieser Knoten steht/stehen wird."
@@ -170,13 +170,13 @@ msgid "If neccessary, please update where this node will be located at."
 msgstr "Bei Bedarf bitte den Standort aktualisieren, falls er nicht mehr aktuell ist."
 
 msgid "To select which configuration your node should use, we need to know where it will be located."
-msgstr "Um die korrekte Konfiguration für diesen Knoten zu ermitteln, müssen wir wissen, wo er stehen soll."
+msgstr "Um die korrekte Konfiguration für diesen Knoten zu ermitteln, müssen wir wissen, wo er stehen wird."
 
 msgid "We will use OpenStreetMap data to convert the coordinates you enter below to a street address, which in turn will result in a location code (locode)."
-msgstr "Wir nutzen OpenStreetMap-Daten, um die Koordinaten in eine Adresse umzurechnen, aus welcher sich wiederum ein Ortskode (locode) ergibt."
+msgstr "Wir nutzen OpenStreetMap-Daten, um die Koordinaten in eine Adresse umzurechnen, aus welcher sich wiederum ein Ortskode (›locode‹) ergibt."
 
 msgid "We strongly believe in server-assisted setup, therefore we kindly request this information from you and that your node is connected to the Internet during Setup."
-msgstr "Da wir stark auf server-basierte Konfiguration bauen, gib' uns bitte die Aufstellungskoordinaten; einer Anzeige an diesen auf unserer Karte kannst Du an anderer Stelle widersprechen. Bitte achte darauf, daß dieser Knoten jetzt Internetzugang hat, anderenfalls ist eine Konfiguration nicht möglich."
+msgstr "Um Konfiguration und Nutzung so einfach wie möglich zu gestallten, wird der Knoten automatisch und servergestützt anhand der angegebenen Koordinaten konfiguiert. Einer Anzeige des Knotens auf unserer Karte kannst Du vor Abschluß der Konfiguration widersprechen. Bitte achte darauf, daß dieser Knoten jetzt Internetzugang hat, anderenfalls ist eine Konfiguration nicht möglich."
 
 msgid "This node can try network-based location. Our server will receive the neighbouring WiFi networks and try to translate that into a geoposition."
 msgstr "Dieser Knoten kann versuchen, sich über die WLAN-Netze der Umgebung lokalisieren zu lassen."
@@ -205,4 +205,4 @@ msgid "Show node on the map"
 msgstr "Knoten auf Karten anzeigen"
 
 msgid "To change, go to Advanced settings/Geolocation."
-msgstr "Zum ändern bitte unter <em>Erweiterte Einstellungen</em> auf <em>Geolocation</em> gehen."
+msgstr "Zum ändern bitte unter ›Erweiterte Einstellungen‹ auf ›Geolocation‹ gehen."
