docs: releases/v2018.1.2: fix link in known issues

--- a/docs/releases/v2018.1.2.rst
+++ b/docs/releases/v2018.1.2.rst
@@ -38,7 +38,7 @@ Other changes
 Known issues
 ~~~~~~~~~~~~
 
-* Missing kernel module dependencies prevent batman-adv from being loaded on devices without WiFi drivers  (`#1578 <https://github.com/freifunk-gluon/gluon/issues/1578`_)
+* Missing kernel module dependencies prevent batman-adv from being loaded on devices without WiFi drivers  (`#1578 <https://github.com/freifunk-gluon/gluon/issues/1578>`_)
 
 * Default TX power on many Ubiquiti devices is too high, correct offsets are unknown (`#94 <https://github.com/freifunk-gluon/gluon/issues/94>`_)
 
